--- a/src/main/resources/templates/bulletin-template.html
+++ b/src/main/resources/templates/bulletin-template.html
@@ -46,7 +46,7 @@
             display: table-cell;
             width: 120px;
             height: 70px;
-            border: 2px dashed #bdc3c7;
+            /*border: 2px dashed #bdc3c7;*/
             text-align: center;
             vertical-align: middle;
             font-size: 9px;
