refractor: modifier le bulletin pour afficher les bonen valeur et pour que tout les formule applique

--- a/src/main/resources/templates/bulletin-template.html
+++ b/src/main/resources/templates/bulletin-template.html
@@ -232,14 +232,14 @@
         }
 
         /* Colonnes avec largeurs optimisées */
-        .payroll-table th:nth-child(1) { width: 7%; }
-        .payroll-table th:nth-child(2) { width: 32%; }
-        .payroll-table th:nth-child(3) { width: 7%; }
-        .payroll-table th:nth-child(4) { width: 14%; }
-        .payroll-table th:nth-child(5) { width: 8%; }
-        .payroll-table th:nth-child(6) { width: 12%; }
-        .payroll-table th:nth-child(7) { width: 10%; }
-        .payroll-table th:nth-child(8) { width: 10%; }
+        .payroll-table th:nth-child(1) { width: 18%; } /* DÉSIGNATION */
+        .payroll-table th:nth-child(2) { width: 7%; }  /* NB */
+        .payroll-table th:nth-child(3) { width: 10%; } /* BASE */
+        .payroll-table th:nth-child(4) { width: 10%; } /* TAUX */
+        .payroll-table th:nth-child(5) { width: 12%; } /* GAIN */
+        .payroll-table th:nth-child(6) { width: 12%; } /* RETENUE */
+        .payroll-table th:nth-child(7) { width: 11%; } /* TAUX PATRONAL */
+        .payroll-table th:nth-child(8) { width: 11%; } /* RETENUE PATRONALE */
 
         .summary-section {
             margin-top: 15px;
